# GemDataPipeline

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  REQUIREMENTS_CHECK.md  cache  count_task_submitted.py  pyproject.toml  run.py  run.sh  run_code_agent.sh  run_pandas_generation.py  search_cache.json  task_category_generated0.json  test_deepseek.sh  记录.md
agent_gem/: __init__.py  cli.py  config.py  database.py  generator.py  llm.py  synthesis.py  tools.py  utils.py  writer.py
agent_gem/agents/: __init__.py  base.py  code_agent.py  code_bug_generator.py  code_interpreter_agent.py  code_repo_analyzer.py  code_test_validator.py  feature_requester_generator.py  general_agent.py  general_agent_v1.py  sandbox_integration.py  search_agent.py
agent_gem/agents/code_agent/: __init__.py  agent.py  cli.py  entity.py  entity_extractor.py  environment_setup_agent.py  feature_requester_generator.py  issue_generator.py  pr_annotator.py  pr_crawler.py  pr_extractor.py  prompt.py  raw_tasks.py  repo.py  repo_crawler.py  task_executor.py  task_generator.py  triple_generator.py
agent_gem/agents/code_agent/environment_setup_utils/: __init__.py  base_agent.py  message_thread.py  model_adapter.py  task_adapter.py  utils_adapter.py
agent_gem/agents/general_agent/: __init__.py  agent.py  cli.py  data_pipeline.py  persist.py  sandbox.py  setup_flow.py  task_builder.py  tool_synthesis.py  validation_flow.py
agent_gem/agents/search_agent/: __init__.py  agent.py  answer_generator.py  cli.py  entity_sampler.py  prompt_mixin.py  question_constructor.py  search_api.py  verification.py
agent_gem/core/: __init__.py  evaluation.py  task_schema.py  utils.py  validation.py
agent_gem/env_generator/: __init__.py  generator.py
agent_gem/sandbox/: __init__.py  executor.py  manager.py
agent_gem/tools/: __init__.py  base.py  bash.py  docker.py  python_runner.py  records.py  sandbox_fusion.py  search.py
config/: README.md  code_agent.yaml
examples/: code_agent_example.py  quickstart.py  run_code_agent.sh  run_search_agent.sh
examples/code_agent/: organize_tasks.py  run_entity_extractor.py  run_entity_extractor.sh  run_environmentsetup.py  run_issue_generator.py  run_pr_annotator.py  run_pr_crawler.py  run_pr_extractor.py  run_repo_crawler.py  run_task_executor.py  run_task_generator.py  triple_generation.py
examples/config/: code_agent.yaml
firecrawl/: .env.instance  .env.instance2  .env.instance3  docker-compose.yaml  修改内容.md
firecrawl/.git.backup/: config  index  packed-refs
firecrawl/apps/nuq-postgres/: Dockerfile
firecrawl/docker/: helpers.js  patch.sh
general_agent/: __init__.py  cli.py  config.py  constraints.py  database.py  executor.py  llm.py  synthesis.py  tools.py  utils.py
general_agent/synthesis/: __init__.py  agents.py  context.py  execution.py  synthesizer.py  task_bundle.py  utils.py
sandbox/test/test_empty/: tasks.json
sandbox/test/test_good/: tasks.json
sandbox/test/test_good2/: db.json  tasks.json
tests/: test_code_agent.py  test_logging_format_strings.py  test_tool_spec_from_function_string.py
(+196 files in other folders)
